# kore

./: CMakeLists.txt  Makefile
includes/: kore.h  video_cache.h
src/: http.c  kore.c  mem.c  video_cache.c
